# CleanRoom-ransomware-detection

./: ABOUT.md  README.md  install.sh  pyproject.toml  requirements.txt
cleanroom/: __init__.py  __main__.py  app.py  config.py  ports.py
cleanroom/detection/: __init__.py  baseline.py  engine.py  ml_model.py  scorer.py
cleanroom/detection/detectors/: __init__.py  base.py  canary_detector.py  entropy_detector.py  extension_detector.py  mass_ops_detector.py  velocity_detector.py
cleanroom/domain/: __init__.py  anomaly.py  delta.py  features.py  file_record.py  recovery.py  snapshot.py
cleanroom/infrastructure/: __init__.py  file_repository.py
cleanroom/interfaces/: __init__.py  api.py  cli.py  render.py
cleanroom/interfaces/dashboard/: index.html
cleanroom/recovery/: __init__.py  analyzer.py
cleanroom/services/: __init__.py  capturer.py  differ.py  entropy.py  feature_extractor.py
cleanroom/simulator/: __init__.py  corpus.py  families.py  timeline.py
data/demo/: 0001.snapshot.json  0002.snapshot.json  0003.snapshot.json  0004.snapshot.json  0005.snapshot.json
data/demo_int/: 0001.snapshot.json  0002.snapshot.json  0004.snapshot.json  0005.snapshot.json  0006.snapshot.json  0007.snapshot.json
data/demo_wipe/: 0001.snapshot.json  0002.snapshot.json  0003.snapshot.json  0004.snapshot.json  0005.snapshot.json
tests/: test_benchmark.py  test_detectors.py  test_differ.py  test_entropy.py  test_pipeline.py  test_repository.py
