[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanroom"
version = "1.0.0"
description = "Ransomware-resilience engine: storage forensics on immutable backup snapshots."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aryan Rasiwasia" }]
keywords = ["ransomware", "anomaly-detection", "backup", "forensics", "entropy", "rubrik"]

dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# Lets users run the tool simply as `cleanroom ...` after install.
[project.scripts]
cleanroom = "cleanroom.interfaces.cli:main"

[tool.setuptools.packages.find]
include = ["cleanroom*"]

[tool.setuptools.package-data]
cleanroom = ["interfaces/dashboard/*.html", "interfaces/dashboard/*.js", "interfaces/dashboard/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
